# memory-maze-benchmark

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  Makefile  README.md  benchmark_backends.py  benchmark_physics.py  pyproject.toml  requirements-notebooks.txt  requirements.txt  train_dreamer.py  train_impala.py
.claude/agents/: genesis-expert.md  maze-expert.md  runpod-manager.md  training-expert.md
.claude/skills/: benchmark.md  deploy.md  pod.md  setup.md  test.md
docker/: Dockerfile  README.md  deploy.sh  run_training.sh  smoke_test.py
docs/: bottleneck_analysis.md  engine_comparison.md  genesis_training_report.md  physics_timestep_optimization.md
notebooks/: 01_environment_tour.ipynb  02_train_and_plot.ipynb  03_evaluate_and_record.ipynb  04_compare_algorithms.ipynb  04_engine_comparison.ipynb  05_engine_comparison.ipynb  05_model_playground.ipynb  06_model_playground.ipynb  README.md  utils.py
runpod/: pod_manager.py
tests/: conftest.py  test_environment.py  test_smoke.py  test_training.py
torchbeast/: LICENSE  README.md
